1.9.1
* Client: When calculating initial average block size, assume MAX_BLOCK_SIZE for the purged ones
* Client: WebUI/Blocks can show new blocks extended fee stats when "CFG.Stat.BlockFees" is true
* Client: changed configuration related data
* Client: Changed rules of choosing the "slowest" peer to drop
* Client/WebIO: shows New York Agreement support related info in "Block" and "Miners" tabs
* Client: "SaveOnDisk" config option for "TXPool" and "AllBalances" (defaults to false)
* Client: save mempool on exit and load in on startup
* Client: on close save all balances to "balances.db" (for quicker start next time)
* Client: adding of a new block to block's db is accounted inside the queue time statistics
* Client: abort saving of UITXO.db before starting to precess a new block
* Added some protection against nodes sending own IP instead of ours (bitcointalk.org/index.php?topic=1954151.0)
* Node's TxsReceived stat only counts the last hour
* "btc.Uint256IdxLen" and "utxo.UtxoIdxLen" set back to 8 bytes, to decrease memory usage
* Client: fixed the way best external IP is selected
* WebUI/Txs: Limit memory pool fees graph to first 10 MB
* WebUI: Do not display wallet name(s) in each tab's header (privacy)
* WebUI/Blocks: Dispaly either mining info or block processing info
* client/wallet: Use hashmap (instead of list) for addresses with "CFG.AllBalances.UseMapCnt"+ unspent outputs
* WebUI: Do not show Wallet and MakeTx tabs in NoWallet mode
* WebUI/Wallet: Show QR code when clicking on the address

1.9.0 - 2017-05-05
* Got rid of "qdb" for UTXO.
* New package "lib/utxo" extracted from "lib/chain"
* Announce a new block to peers before its fully verified (like Core 0.14.0 / net protocol 70015)
* bdb: -purgeto <block_height> to purge all blocks up to given height
* client: does not offer to import core's blocks-db anymore
* Optimized the way new blocks are written to disk (verification should be faster now)