@@ -37,7 +37,7 @@ func stat(totnsec, pernsec int64, totbytes, perbytes uint64, height uint32) {
 
 func import_blockchain(dir string) {
 	BlockDatabase := blockdb.NewBlockDB(dir, Magic)
-	chain := chain.NewChain(GocoinHomeDir, GenesisBlock, false)
+	chain := chain.NewChainExt(GocoinHomeDir, GenesisBlock, false, nil)
 
 	var bl *btc.Block
 	var er error
